--- a/app/components/agenda/agenda-header/agenda-actions.hbs
+++ b/app/components/agenda/agenda-header/agenda-actions.hbs
@@ -60,6 +60,13 @@
   >
     Download beslissingsfiches
   </AuButton>
+  <AuHr />
+  <AuButton
+    @skin="link"
+    role="menuitem"
+  >
+    Alle beslissingen aanbieden voor handtekenen
+  </AuButton>
   {{#if (user-may "manage-meetings")}}
     <AuHr />
     <AuButton
