--- a/app/components/documents/batch-details/batch-documents-details-modal.hbs
+++ b/app/components/documents/batch-details/batch-documents-details-modal.hbs
@@ -23,6 +23,7 @@
             {{else}}
               <th>{{t "file-type"}}</th>
             {{/if}}
+            <th>Handtekenen</th>
             <th>{{! Actions }}</th>
           </tr>
         </thead>
