--- a/app/components/signatures/signatures-add-minister.hbs
+++ b/app/components/signatures/signatures-add-minister.hbs
@@ -4,37 +4,39 @@
     <div class="auk-form-group">
       <Auk::CheckboxList>
         <Auk::Checkbox
-          @label="Jan Jambon, Minister-president van de Vlaamse Regering"
-          @checked={{true}}
-          @disabled={{true}}
-        />
-        <Auk::Checkbox
-          @label="Jan Jambon, Vlaams minister van Buitenlandse Zaken, Cultuur, Digitalisering en Facilitair Management"
-        />
-        <Auk::Checkbox
-          @label="Hilde Crevits, Vlaams minister van Economie, Innovatie, Werk, Sociale economie en Landbouw"
-        />
-        <Auk::Checkbox
-          @label="Bart Somers, Vlaams minister van Binnenlands Bestuur, Bestuurszaken, Inburgering en Gelijke Kansen"
-        />
-        <Auk::Checkbox
-          @label="Ben Weyts, Vlaams minister van Onderwijs, Sport, Dierenwelzijn en Vlaamse Rand"
-        />
-        <Auk::Checkbox
-          @label="Zuhal Demir, Vlaams minister van Justitie en Handhaving, Omgeving, Energie en Toerisme"
-        />
-        <Auk::Checkbox
-          @label="Wouter Beke, Vlaams minister van Welzijn, Volksgezondheid, Gezin en Armoedebestrijding"
-        />
-        <Auk::Checkbox
-          @label="Matthias Diependaele, Vlaams minister van Financiën en Begroting, Wonen en Onroerend Erfgoed"
-        />
-        <Auk::Checkbox
-          @label="Lydia Peeters, Vlaams minister van Mobiliteit en Openbare Werken"
+          @label="Jan Jambon"
           @checked={{true}}
         />
         <Auk::Checkbox
-          @label="Benjamin Dalle, Vlaams minister van Brussel, Jeugd en Media"
+          @label="Jan Jambon"
+        />
+        <Auk::Checkbox
+          @label="Hilde Crevits"
+        />
+        <Auk::Checkbox
+          @label="Bart Somers"
+        />
+        <Auk::Checkbox
+          @label="Ben Weyts"
+        />
+        <Auk::Checkbox
+          @label="Zuhal Demir"
+        />
+        <Auk::Checkbox
+          @label="Wouter Beke"
+        />
+        <Auk::Checkbox
+          @label="Matthias Diependaele"
+        />
+        <Auk::Checkbox
+          @label="Lydia Peeters"
+          @checked={{true}}
+        />
+        <Auk::Checkbox
+          @label="Benjamin Dalle"
+        />
+        <Auk::Checkbox
+          @label="Jeroen van Overmere"
         />
       </Auk::CheckboxList>
     </div>
