--- a/app/components/signatures/signatures-filter-modal.hbs
+++ b/app/components/signatures/signatures-filter-modal.hbs
@@ -4,35 +4,38 @@
     <div class="auk-form-group">
       <Auk::CheckboxList>
         <Auk::Checkbox
-          @label="Jan Jambon, Minister-president van de Vlaamse Regering"
+          @label="Jan Jambon"
           @checked={{true}}
         />
         <Auk::Checkbox
-          @label="Jan Jambon, Vlaams minister van Buitenlandse Zaken, Cultuur, Digitalisering en Facilitair Management"
+          @label="Jan Jambon"
         />
         <Auk::Checkbox
-          @label="Hilde Crevits, Vlaams minister van Economie, Innovatie, Werk, Sociale economie en Landbouw"
+          @label="Hilde Crevits"
         />
         <Auk::Checkbox
-          @label="Bart Somers, Vlaams minister van Binnenlands Bestuur, Bestuurszaken, Inburgering en Gelijke Kansen"
+          @label="Bart Somers"
         />
         <Auk::Checkbox
-          @label="Ben Weyts, Vlaams minister van Onderwijs, Sport, Dierenwelzijn en Vlaamse Rand"
+          @label="Ben Weyts"
         />
         <Auk::Checkbox
-          @label="Zuhal Demir, Vlaams minister van Justitie en Handhaving, Omgeving, Energie en Toerisme"
+          @label="Zuhal Demir"
         />
         <Auk::Checkbox
-          @label="Wouter Beke, Vlaams minister van Welzijn, Volksgezondheid, Gezin en Armoedebestrijding"
+          @label="Wouter Beke"
         />
         <Auk::Checkbox
-          @label="Matthias Diependaele, Vlaams minister van Financiën en Begroting, Wonen en Onroerend Erfgoed"
+          @label="Matthias Diependaele"
         />
         <Auk::Checkbox
-          @label="Lydia Peeters, Vlaams minister van Mobiliteit en Openbare Werken"
+          @label="Lydia Peeters"
         />
         <Auk::Checkbox
-          @label="Benjamin Dalle, Vlaams minister van Brussel, Jeugd en Media"
+          @label="Benjamin Dalle"
+        />
+        <Auk::Checkbox
+          @label="Jeroen van Overmere"
         />
       </Auk::CheckboxList>
     </div>
