--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -54,6 +54,16 @@
       />
     </td>
   {{/if}}
+  <td>    
+     <div class="auk-o-flex auk-o-flex--spaced auk-u-mt-2">
+      <Auk::Toggle
+        @checked={{true}}
+      />
+      <label class="auk-c-toggle-label au-u-muted">
+        Te handtekenen
+      </label>
+    </div>
+  </td>
   <td>
     <WebComponents::AuButtonToolbar>
       {{#if (not @isEditingEnabled)}}
