--- a/app/templates/export/decision.hbs
+++ b/app/templates/export/decision.hbs
@@ -1,11 +1,15 @@
 <div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
     <div class="au-c-content au-c-content--small">
-      <h1>Export titel</h1>
-      <p class="au-u-h4">Beslissing van 18-11-2022 om 10:23</p>
+      <div class="au-c-export-logo">
+        <img
+          src="/assets/logo_vlaamse_regering.svg"
+          alt={{capitalize (t "flemish-government")}}
+        />
+      </div>
+      <h1 class="au-u-text-center">Elektronische vergadering van vrijdag 30 september 2022</h1>
       <hr>
-      <p class="au-u-h4">Resultaat beslissing: goedgekeurd</p>
-      <hr>
+      <p class="au-u-h4 u-text-center">VR PV 2022/43 - punt 0007</p>
       <h4>Betreft :</h4>
       <p>Toegang havens<br/>Voorontwerp van koninklijk besluit betreffende het verbieden van toegang tot de Belgische havens door gesanctioneerde schepen<br/>Betrokkenheid van de Vlaamse Regering<br/>Standpuntbepaling<br/>(VR 2022 3009 DOC.1056/1 en DOC.1056/2)</p> 
       <h4>Beslissing :</h4>
