--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -52,7 +52,7 @@
             <Auk::Label>{{t "type"}}</Auk::Label>
             <Auk::Checkbox
               @checked={{this.decisionsOnly}}
-              @label={{t "search-in-decisions-only"}}
+              @label="Beslissingen"
               data-test-route-search-cases-toggle-decisions={{true}}
               {{on "input" this.toggleDecisionsOnly}}
             />
