KAS-3901 add disabling when loading in custom confirmation modal

--- a/app/components/confirmation-modal.hbs
+++ b/app/components/confirmation-modal.hbs
@@ -42,7 +42,7 @@
             <AuButton
               data-test-confirmation-modal-confirm
               @alert={{@alert}}
-              @disabled={{@disabled}}
+              @disabled={{or @disabled @loading}}
               @loading={{@loading}}
               @icon={{@confirmIcon}}
               {{on "click" @onConfirm}}
