KAS-3901 add disabled param to AuButton where double click could cause side effects

--- a/app/components/cases/new-subcase.hbs
+++ b/app/components/cases/new-subcase.hbs
@@ -37,6 +37,7 @@
                   @skin="secondary"
                   @icon="copy-paste"
                   {{on "click" (perform this.copyFullSubcase)}}
+                  @disabled={{this.copyFullSubcase.isRunning}}
                 >
                   {{t "clone-previous-subcase"}}
                 </AuButton>
