--- a/app/components/publications/publication/case/info/publication-case-info-panel.hbs
+++ b/app/components/publications/publication/case/info/publication-case-info-panel.hbs
@@ -367,7 +367,7 @@
                 data-test-publication-case-info-panel-cancel
                 @skin="naked"
                 @loading={{this.closeEditingPanel.isRunning}}
-                @disable={{this.save.isRunning}}
+                @disabled={{this.save.isRunning}}
                 {{on "click" (perform this.closeEditingPanel)}}
               >
                 {{t "cancel"}}
