--- a/app/components/publications/publication/proofs/proof-info-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-info-panel.hbs
@@ -84,6 +84,7 @@
               data-test-publication-proof-info-panel-save
               @skin="primary"
               @loading={{this.save.isRunning}}
+              @disabled={{this.save.isRunning}}
               {{on "click" (perform this.save)}}
             >
               {{t "save"}}
