--- a/app/components/publications/publication/translations/translations-info-panel.hbs
+++ b/app/components/publications/publication/translations/translations-info-panel.hbs
@@ -73,6 +73,7 @@
               data-test-publication-translations-info-panel-save
               @skin="primary"
               @loading={{this.save.isRunning}}
+              @disabled={{this.save.isRunning}}
               {{on "click" (perform this.save)}}
             >
               {{t "save"}}
