--- a/app/components/themis-publications/unpublish-confirmation-modal.hbs
+++ b/app/components/themis-publications/unpublish-confirmation-modal.hbs
@@ -24,6 +24,7 @@
     <AuButton
       @skin="primary"
       @loading={{this.confirmUnpublish.isRunning}}
+      @disabled={{this.confirmUnpublish.isRunning}}
       {{on "click" (perform this.confirmUnpublish)}}
     >
       {{t "retract-from-public"}}
