--- a/app/templates/settings/emails.hbs
+++ b/app/templates/settings/emails.hbs
@@ -120,7 +120,7 @@
             <Group.Item>
               <AuButton
                 @skin="naked"
-                @disable={{this.save.isRunning}}
+                @disabled={{this.save.isRunning}}
                 {{on "click" this.cancel}}
               >
                 {{t "cancel"}}
