--- a/app/components/mandatees/mandatees-panel/mandatees-panel-edit.hbs
+++ b/app/components/mandatees/mandatees-panel/mandatees-panel-edit.hbs
@@ -83,6 +83,7 @@
             data-test-mandatee-panel-edit-save
             @skin="primary"
             @loading={{this.save.isRunning}}
+            @disabled={{this.save.isRunning}}
             {{on "click" (perform this.save)}}
           >
             {{t "save"}}
