--- a/app/components/news-item/edit-panel.hbs
+++ b/app/components/news-item/edit-panel.hbs
@@ -97,6 +97,7 @@
                   <AuButton
                     data-test-news-item-edit-item-save
                     @loading={{this.confirmSave.isRunning}}
+                    @disabled={{this.confirmSave.isRunning}}
                     {{on "click" this.save}}
                   >
                     {{t "save"}}
@@ -123,7 +124,7 @@
       </Auk::Panel::Body>
       <Auk::Panel::Body class="au-u-background-gray-100">
         <div class="auk-form-group auk-u-text-capitalize">
-          <Auk::Label>Opmerking</Auk::Label>
+          <Auk::Label>{{t "comment-title"}}</Auk::Label>
           <AuInput
             data-test-news-item-edit-item-remark
             @width="block"
