--- a/app/components/publications/publication/case/remark/remark-panel.hbs
+++ b/app/components/publications/publication/case/remark/remark-panel.hbs
@@ -79,6 +79,7 @@
                 data-test-remark-panel-save
                 @skin="primary"
                 @loading={{this.save.isRunning}}
+                @disabled={{this.save.isRunning}}
                 {{on "click" (perform this.save)}}
               >
                 {{t "save"}}
