--- a/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
@@ -73,6 +73,7 @@
             data-test-subcase-description-edit-save
             @skin="primary"
             @loading={{this.isSaving}}
+            @disabled={{this.isSaving}}
             {{on "click" this.saveChanges}}
           >
             {{t "save"}}
