--- a/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
+++ b/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
@@ -53,6 +53,7 @@
             data-test-subcase-titles-edit-save={{true}}
             @skin="primary"
             @loading={{this.saveChanges.isRunning}}
+            @disabled={{this.saveChanges.isRunning}}
             {{on "click" (perform this.saveChanges)}}
           >
             {{t "save"}}
