--- a/app/components/themis-publications/publish-confirmation-modal.hbs
+++ b/app/components/themis-publications/publish-confirmation-modal.hbs
@@ -10,6 +10,7 @@
     <AuButton
       @skin="primary"
       @loading={{this.confirmPublish.isRunning}}
+      @disabled={{this.confirmPublish.isRunning}}
       {{on "click" (perform this.confirmPublish)}}
     >
       {{t "publish-to-public"}}
