feat: ensure that document type filter doesn't apply filtering when empty

--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -7,7 +7,7 @@
     />
   {{/if}}
   <Search::DocumentTypeFilter
-    @selected={{this.documentTypes}}
+    @selected={{this.documentTypesBuffer}}
     @onChange={{this.setDocumentTypes}}
   />
 {{/in-element}}
