KAS-3866 Add checkbox-list styleguide page

--- a/app/templates/styleguide.hbs
+++ b/app/templates/styleguide.hbs
@@ -62,6 +62,9 @@
           <li>
             <LinkTo @route="styleguide.button-loading">Button (loading)</LinkTo>
           </li>
+           <li>
+            <LinkTo @route="styleguide.checkbox-list">{{t "style-guide-checkbox-list"}}</LinkTo>
+          </li>
           <li>
             <LinkTo @route="styleguide.checkbox-tree">Checkbox tree</LinkTo>
           </li>
